--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^3.0.1",
     "@uirouter/react": "^0.8.7",
+    "material-ui-flat-pagination": "^3.1.0",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
